--- a/opencv/package.xml
+++ b/opencv/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>opencv_helloworld</name>
+  <name>opencv</name>
   <version>0.0.0</version>
   <description>The opencv_helloworld package</description>
 
